--- a/Employee Attrition Prediction & HR Analytics.ipynb
+++ b/Employee Attrition Prediction & HR Analytics.ipynb
@@ -35,11 +35,685 @@
     "\n",
     "A list of resources I used to troubleshoot issues and guide development"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "246fb6d0",
+   "metadata": {},
+   "source": [
+    "### Familiarize with the HR dataset \n",
+    "\n",
+    "In this [dataset](https://www.kaggle.com/datasets/mfaisalqureshi/hr-analytics-and-job-prediction?select=HR_comma_sep.csv), there are 14,999 rows, 10 columns, and these variables: \n",
+    "\n",
+    "Variable  |Description |\n",
+    "-----|-----| \n",
+    "satisfaction_level|Employee-reported job satisfaction level [0&ndash;1]|\n",
+    "last_evaluation|Score of employee's last performance review [0&ndash;1]|\n",
+    "number_project|Number of projects employee contributes to|\n",
+    "average_monthly_hours|Average number of hours employee worked per month|\n",
+    "time_spend_company|How long the employee has been with the company (years)\n",
+    "Work_accident|Whether or not the employee experienced an accident while at work\n",
+    "left|Whether or not the employee left the company\n",
+    "promotion_last_5years|Whether or not the employee was promoted in the last 5 years\n",
+    "Department|The employee's department\n",
+    "salary|The employee's salary (U.S. dollars)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c073d76",
+   "metadata": {},
+   "source": [
+    "## Step 1. Imports\n",
+    "\n",
+    "*   Import packages\n",
+    "*   Load dataset\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d92c92b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting xgboost\n",
+      "  Using cached xgboost-3.1.2-py3-none-win_amd64.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: numpy in c:\\users\\gande\\anaconda3\\lib\\site-packages (from xgboost) (2.1.3)\n",
+      "Requirement already satisfied: scipy in c:\\users\\gande\\anaconda3\\lib\\site-packages (from xgboost) (1.15.3)\n",
+      "Using cached xgboost-3.1.2-py3-none-win_amd64.whl (72.0 MB)\n",
+      "Installing collected packages: xgboost\n",
+      "Successfully installed xgboost-3.1.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "%pip install xgboost\n",
+    "\n",
+    "# For data manipulation\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# For data visualization\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# For displaying all of the columns in dataframes\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "\n",
+    "# For data modeling\n",
+    "from xgboost import XGBClassifier\n",
+    "from xgboost import XGBRegressor\n",
+    "from xgboost import plot_importance\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# For metrics and helpful functions\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score,\\\n",
+    "f1_score, confusion_matrix, ConfusionMatrixDisplay, classification_report\n",
+    "from sklearn.metrics import roc_auc_score, roc_curve\n",
+    "from sklearn.tree import plot_tree\n",
+    "\n",
+    "# For saving models\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "33fcebf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "satisfaction_level",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "last_evaluation",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "number_project",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "average_montly_hours",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "time_spend_company",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Work_accident",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "left",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "promotion_last_5years",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Department",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "salary",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "68eb998c-f58c-4e3f-aba5-350b4fe0646d",
+       "rows": [
+        [
+         "0",
+         "0.38",
+         "0.53",
+         "2",
+         "157",
+         "3",
+         "0",
+         "1",
+         "0",
+         "sales",
+         "low"
+        ],
+        [
+         "1",
+         "0.8",
+         "0.86",
+         "5",
+         "262",
+         "6",
+         "0",
+         "1",
+         "0",
+         "sales",
+         "medium"
+        ],
+        [
+         "2",
+         "0.11",
+         "0.88",
+         "7",
+         "272",
+         "4",
+         "0",
+         "1",
+         "0",
+         "sales",
+         "medium"
+        ],
+        [
+         "3",
+         "0.72",
+         "0.87",
+         "5",
+         "223",
+         "5",
+         "0",
+         "1",
+         "0",
+         "sales",
+         "low"
+        ],
+        [
+         "4",
+         "0.37",
+         "0.52",
+         "2",
+         "159",
+         "3",
+         "0",
+         "1",
+         "0",
+         "sales",
+         "low"
+        ]
+       ],
+       "shape": {
+        "columns": 10,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>satisfaction_level</th>\n",
+       "      <th>last_evaluation</th>\n",
+       "      <th>number_project</th>\n",
+       "      <th>average_montly_hours</th>\n",
+       "      <th>time_spend_company</th>\n",
+       "      <th>Work_accident</th>\n",
+       "      <th>left</th>\n",
+       "      <th>promotion_last_5years</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>2</td>\n",
+       "      <td>157</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sales</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>5</td>\n",
+       "      <td>262</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sales</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>7</td>\n",
+       "      <td>272</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sales</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>5</td>\n",
+       "      <td>223</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sales</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>2</td>\n",
+       "      <td>159</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sales</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   satisfaction_level  last_evaluation  number_project  average_montly_hours  \\\n",
+       "0                0.38             0.53               2                   157   \n",
+       "1                0.80             0.86               5                   262   \n",
+       "2                0.11             0.88               7                   272   \n",
+       "3                0.72             0.87               5                   223   \n",
+       "4                0.37             0.52               2                   159   \n",
+       "\n",
+       "   time_spend_company  Work_accident  left  promotion_last_5years Department  \\\n",
+       "0                   3              0     1                      0      sales   \n",
+       "1                   6              0     1                      0      sales   \n",
+       "2                   4              0     1                      0      sales   \n",
+       "3                   5              0     1                      0      sales   \n",
+       "4                   3              0     1                      0      sales   \n",
+       "\n",
+       "   salary  \n",
+       "0     low  \n",
+       "1  medium  \n",
+       "2  medium  \n",
+       "3     low  \n",
+       "4     low  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Load dataset into a dataframe\n",
+    "df = pd.read_csv(\"HR_comma_sep.csv\")\n",
+    "# Display first few rows of the dataframe\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0e7a3b40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "satisfaction_level",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "last_evaluation",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "number_project",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "average_montly_hours",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "time_spend_company",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Work_accident",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "left",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "promotion_last_5years",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Department",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "salary",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "a0e3f98b-3139-4cd8-8d8c-1c17f19b340f",
+       "rows": [
+        [
+         "14994",
+         "0.4",
+         "0.57",
+         "2",
+         "151",
+         "3",
+         "0",
+         "1",
+         "0",
+         "support",
+         "low"
+        ],
+        [
+         "14995",
+         "0.37",
+         "0.48",
+         "2",
+         "160",
+         "3",
+         "0",
+         "1",
+         "0",
+         "support",
+         "low"
+        ],
+        [
+         "14996",
+         "0.37",
+         "0.53",
+         "2",
+         "143",
+         "3",
+         "0",
+         "1",
+         "0",
+         "support",
+         "low"
+        ],
+        [
+         "14997",
+         "0.11",
+         "0.96",
+         "6",
+         "280",
+         "4",
+         "0",
+         "1",
+         "0",
+         "support",
+         "low"
+        ],
+        [
+         "14998",
+         "0.37",
+         "0.52",
+         "2",
+         "158",
+         "3",
+         "0",
+         "1",
+         "0",
+         "support",
+         "low"
+        ]
+       ],
+       "shape": {
+        "columns": 10,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>satisfaction_level</th>\n",
+       "      <th>last_evaluation</th>\n",
+       "      <th>number_project</th>\n",
+       "      <th>average_montly_hours</th>\n",
+       "      <th>time_spend_company</th>\n",
+       "      <th>Work_accident</th>\n",
+       "      <th>left</th>\n",
+       "      <th>promotion_last_5years</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14994</th>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>2</td>\n",
+       "      <td>151</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>support</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14995</th>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>2</td>\n",
+       "      <td>160</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>support</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14996</th>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>2</td>\n",
+       "      <td>143</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>support</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14997</th>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>6</td>\n",
+       "      <td>280</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>support</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14998</th>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>2</td>\n",
+       "      <td>158</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>support</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       satisfaction_level  last_evaluation  number_project  \\\n",
+       "14994                0.40             0.57               2   \n",
+       "14995                0.37             0.48               2   \n",
+       "14996                0.37             0.53               2   \n",
+       "14997                0.11             0.96               6   \n",
+       "14998                0.37             0.52               2   \n",
+       "\n",
+       "       average_montly_hours  time_spend_company  Work_accident  left  \\\n",
+       "14994                   151                   3              0     1   \n",
+       "14995                   160                   3              0     1   \n",
+       "14996                   143                   3              0     1   \n",
+       "14997                   280                   4              0     1   \n",
+       "14998                   158                   3              0     1   \n",
+       "\n",
+       "       promotion_last_5years Department salary  \n",
+       "14994                      0    support    low  \n",
+       "14995                      0    support    low  \n",
+       "14996                      0    support    low  \n",
+       "14997                      0    support    low  \n",
+       "14998                      0    support    low  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b584fb8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(14999, 10)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
